# haskellbook

./: .gitignore
ch02/: FunctionWithLet.hs  chap-ex.hs  ex-let-to-where.hs  learn.hs  practice.hs  test.hs
ch03/: Global.hs  chexBuildFuncs.hs  ex01.hs  ex02.building.functions.01.hs  ex02.building.functions.03.hs  ex02.building.functions.05.hs  ex02.building.functions.06.hs  ex02.building.functoins.03.hs  ex02.hs  reverse.hs
ch04/: 01.Mood.hs  02.Exercises.hs  99.ex.01.01.hs  99.ex.01.09.myAbs.hs  99.ex.01.10.f.hs  99.ex.02.correcting.syntax.01.hs  99.ex.defs.hs  Mood.hs  baseExc.hs  ex08.hs  ex09.hs  greetIfCool1.hs  greetIfCool2.hs
ch05/: 01.type.matching.ex.01.hs  02.addStuff.hs  03.ex.type.arguments.01.hs  05.type.inferenc.hs  06.type.inference.02.hs  07.ex.determine.the.type.01.hs  08.ex.write.a.type.signature.01.hs  09.ex.given.a.type.write.the.function.01.hs  10.ex.fix.it.01.hs  10.ex.fix.it.02.hs  11.ex.type.kwon.do.01.hs
ch06/: 02DayOfWeek.hs  03ExEqInstances.hs  04Fractional.hs  05OrdInstances.hs  07InstancesDispatchedByType.hs  07InstancesDispatchedByType02.hs  14ChapterExcercises01MultipleChoice.hs  14ChapterExcercises02DoesItTypecheck.hs  14ChapterExcercises03MatchTheTypes.hs  14ChapterExcercises04TypeKwonDoTwo.hs
ch07/: 02SettingParameters.hs  03AnonymousFunctionsEx01GrabBag.hs  04PatternMatching02.hs  06PatternMatching03Ex.hs  07CaseExpressions01.hs  08GreetIfCool3.hs  09CaseExpressions02Ex.hs  1002HOFOrdering.hs  1003HOFEx.hs  10HOF01.hs  1101Guards.hs  1102GuardDuty.hs  1200FuncComp.hs  1300ChapEx.hs  1301ChapExCode.hs  1302ChapExCode04.hs  registeredUser1.hs  registeredUser2.hs
ch08/: 0201Factorial.hs  0202Factorial.hs  0203Factorial.hs  0301Bottom.hs  0401Fibonacci.hs  0501IntDiv.hs  0601Chapex.hs  0602ChapEx.hs
ch09/: 0301SafeTail.hs  0501ExEnumFromTo.hs  0610ExtractingPortionsOfLists01Ex.hs  0611ExtractingPortionsOfLists02Ex.hs  0705ListComprehensions01Ex.hs  0706ListComprehensions01Ex.hs  0805BottomMadness01Ex.hs  0905MoreBottoms01Ex.hs  1005Filtering01Ex.hs  1105Zipping01Ex.hs  1201ChapEx01.hs  1202ChapEx01Cipher.hs  1203ChapEx01StandardFuncs.hs
ch10/: 0001FoldDefs.hs  0002ScanDefs.hs  0501UnderstandingFolds01Ex.hs  0602DatabaseProcessing01Ex.hs  0901Scan01Ex.hs  1001ChapEx01Warmup.hs  (+1 more)
ch11/: 0902Goats.hs  (+19 more)
ch13/ciphers/: ciphers.cabal
ch13/ciphers/exe/caesar/: Main.hs
ch13/ciphers/exe/vigenere/: Main.hs
ch13/ciphers/src/: Caesar.hs  Vigenere.hs
ch13/palindrome/: LICENSE  palindrome.cabal
ch13/palindrome/src/: Main.hs
ch14/a0301addition/: README.md  a0301addition.cabal
ch14/a0301addition/lib/: Addition.hs
(+278 files in other folders)
