name:                ciphers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bpaterni/ciphers#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Paterni
maintainer:          bpaterni@gmail.com
copyright:           2019
category:            demo
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable caesar
  hs-source-dirs:      exe/caesar
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ciphers

executable vigenere
  hs-source-dirs:      exe/vigenere
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , ciphers

library
  hs-source-dirs:   src
  exposed-modules:  Caesar
                  , Vigenere
  build-depends:    base >= 4.7 && < 5
  default-language: Haskell2010
