name:                a0301addition
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bpaterni/a0301addition#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Paterni
maintainer:          bpaterni@gmail.com
copyright:           2019
category:            demo
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

--executable a0301addition
--  hs-source-dirs:      src
--  main-is:             Main.hs
--  default-language:    Haskell2010
--  build-depends:       base >= 4.7 && < 5

library
  exposed-modules:  Addition
  ghc-options:      -Wall -fwarn-tabs
  build-depends:    base >= 4.7 && < 5
                  , hspec
                  , QuickCheck
  hs-source-dirs:   lib
  default-language: Haskell2010
